# rust-react-todo-app

./: .gitignore  Cargo.toml  LICENSE  README.md
migrations/2021-01-28-113515_create_todos/: up.sql
site/: .eslintrc.json  package.json  tsconfig.json  webpack.config.js  webpack.prod.config.js
site/public/: index.html
site/public/js/: bundle.js
site/src/components/: App.tsx  TodoList.tsx  TodoListItem.tsx
site/src/models/: Todo.ts
site/src/styles/: main.css
src/: main.rs  models.rs  repository.rs  requests.rs  schema.rs
