[package]
name = "rust_todo"
version = "0.1.0"
authors = ["rb_de0 <rebirth.de0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5.4"
actix-files = "0.5.0"
env_logger = "0.8.2"
diesel = { version = "*", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
